--- a/AyED2/2022-02-06/lab/Makefile
+++ b/AyED2/2022-02-06/lab/Makefile
@@ -8,6 +8,13 @@ TARGET = test_uno
 
 all: $(TARGET)
 
+gdb-test: $(TARGET)
+	@echo "run" > gdb_commands.txt
+	@echo "backtrace" >> gdb_commands.txt
+	@echo "quit" >> gdb_commands.txt
+	gdb -x gdb_commands.txt ./$(TARGET)
+	rm gdb_commands.txt
+
 test: $(TARGET)
 	./$(TARGET) -vf input/*.in
 
